--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "file-type": "^16.5.4",
     "handlebars": "^4.7.7",
     "mongoose": "^6.6.5",
     "nestjs-i18n": "^10.2.6",
@@ -62,7 +61,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.85.1"
   },
   "jest": {
     "moduleFileExtensions": [
